--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href=''>Педикюр</a></li>
                 <li><a href=''>Массаж</a></li>
                 <li><a href=''>Мебель</a></li>
+  
               </ul>
             </div>
           </div>
@@ -58,7 +59,8 @@
       <a class='btn' href='#'>Подробнее</a>
     </div>
   </section>
-  <section>
+
+  <section class='catalog'>
     <div class="wrapper">
      <div class="grid">
        <div class="grid-item grid-item-title">
@@ -138,9 +140,9 @@
       <p>Более 300 магазинов<br>по всей России</p>
       <a class='btn' href='#'>Карта магазинов</a>
     </div>
-  </div></div>
+  </div>
+</div>
         </div>
-
 
   </section>
   <footer>
