--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
 <div class="grid-item grid-item-right">
-  <div class="bg-green">
+  <div class="bg-green">  
     <div class="bg-green-item">
       <h3>Заходите к нам</h3>
       <p>Более 300 магазинов<br>по всей России</p>
@@ -146,6 +146,34 @@
 
   </section>
   <footer>
+    <div class="bg-white">
+      <div class="wrapper">
+        <div class="footer-top">
+          <div class="footer-top-item">
+            <ul class='social'>
+              <li class='social-item'><a class='social-link social-youtube'href=''target='blank'></a></li>
+              <li class='social-item'><a class='social-link social-vk'href=''target='blank'></a></li>
+              <li class='social-item'><a class='social-link social-facebook'href=''target='blank'></a></li>
+              <li class='social-item'><a class='social-link social-instagram'href=''target='blank'></a></li>
+            </ul>
+          </div>
+
+          <div class="footer-info">
+            <span>198555, Невский пр. 140, офис 140</span>
+            <span>8 (812) 123-45-67</span>
+            <button type='button'>Обратный звонок</button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="wrapper">
+<div class="footer-bottom">
+      <p>Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</p>
+      <a href='#'>Политика конфиденциальности</a>
+    </div>
+    </div>
+    
 
   </footer>
 </body>
