--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
           <h2 class='title-h2'>Специальные предложения</h2>
      </div>
      <div class="grid-item grid-item-img">
-  <img src="/img/car.svg" alt="Delivery">
+  <img src="img/car.svg" alt="Delivery">
 </div>
 
 
 <div class="grid-item grid-item-catalog">
   <div class="bg-white">
     <div class="thumb">
-      <img src="/img/chair.png" alt="Chair">
+      <img src="img/chair.png" alt="Chair">
     </div>
     <p class='grid-title'>Парикмахерское кресло «Норм» гидравлическое<p>
     <p class='grid-price'>9 900 ₽</p>
@@ -86,20 +86,7 @@
 <div class="grid-item grid-item-catalog">
   <div class="bg-white">
     <div class="thumb">
-      <img src="/img/chair.png" alt="Chair">
-    </div>
-    <p class='grid-title'>Парикмахерское кресло «Норм» гидравлическое<p>
-    <p class='grid-price'>9 900 ₽</p>
-    <a class='grid-btn' href='#'>Купить</a>
-  </div>
-</div>
-
-
-
-<div class="grid-item grid-item-catalog">
-  <div class="bg-white">
-    <div class="thumb">
-      <img src="/img/chair.png" alt="Chair">
+      <img src="img/chair.png" alt="Chair">
     </div>
     <p class='grid-title'>Парикмахерское кресло «Норм» гидравлическое<p>
     <p class='grid-price'>9 900 ₽</p>
@@ -112,7 +99,20 @@
 <div class="grid-item grid-item-catalog">
   <div class="bg-white">
     <div class="thumb">
-      <img src="/img/chair.png" alt="Chair">
+      <img src="img/chair.png" alt="Chair">
+    </div>
+    <p class='grid-title'>Парикмахерское кресло «Норм» гидравлическое<p>
+    <p class='grid-price'>9 900 ₽</p>
+    <a class='grid-btn' href='#'>Купить</a>
+  </div>
+</div>
+
+
+
+<div class="grid-item grid-item-catalog">
+  <div class="bg-white">
+    <div class="thumb">
+      <img src="img/chair.png" alt="Chair">
     </div>
     <p class='grid-title'>Парикмахерское кресло «Норм» гидравлическое<p>
     <p class='grid-price'>9 900 ₽</p>
@@ -128,7 +128,7 @@
       <p>Каждый месяц разыгрываем<br>10 000 рублей для наших клиентов<p>
       <input type="email" placeholder="Введите e-mail">
     </div>
-      <img class='bg-green-img' src="/img/envelope.svg" alt="Envelope">
+      <img class='bg-green-img' src="img/envelope.svg" alt="Envelope">
   </div>
 </div>
 
